# project_coding_basis

./: LICENSE.txt  README.md  Untitled-1.ipynb  config.py  data_loader.py  example.ipynb  hello.py  pyproject.toml  requirements.txt  train_diffusion.py  train_vae.py  曾舸舵 2024104074 期末大作业.md
Models/: diffusion.py  vae.py
checkpoints/: vae.pth
results/diffusion/: diffusion_losses.pkl
results/vae/: vae_loss.csv
utils/: utils.py
