[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-coding"
version = "0.1.0"
authors = [
  {name = "Geduo Zeng", email = "geduozeng@ruc.edu.cn"}
  ]
maintainers = [
  {name = "Geduo Zeng", email = "geduozeng@ruc.edu.cn"}
]
description = "2024fall coding basis final project in ISBD, RUC"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Education",
  "Framework :: Jupyter",
  "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.1",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.9.4",
]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
Homepage = "https://github.com/CabbageSage/project_coding_basis"
Repository = "https://github.com/CabbageSage/project_coding_basis.git"
Issues = "https://github.com/CabbageSage/project_coding_basis/issues"
