[project]
name = "project-coding"
version = "0.1.0"
authors = [
  {name = "Geduo Zeng", email = "geduozeng@ruc.edu.cn"}
  ]
maintainers = [
  {name = "Geduo Zeng", email = "geduozeng@ruc.edu.cn"}
]
description = "2024fall coding basis final project in ISBD, RUC"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Education",
  "Framework :: Jupyter",
  "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "datasets>=3.2.0",
    "diffusers>=0.31.0",
    "ftfy>=6.3.1",
    "matplotlib>=3.9.4",
    "numpy>=2.2.0",
    "pip>=24.3.1",
    "pyarrow>=18.1.0",
    "pyqt5",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.0",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.9.4",
]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
Homepage = "https://github.com/CabbageSage/project_coding_basis"
Repository = "https://github.com/CabbageSage/project_coding_basis.git"
Issues = "https://github.com/CabbageSage/project_coding_basis/issues"
